force-app/main/default/objects/ECP_PrinterManagement__c/ECP_PrinterManagement__c.object-meta.xml
<CustomObject>
    <label>印刷サービス設定</label>
    <nameField>
        <label>印刷サービス名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>