force-app/main/default/objects/ECP_PrinterManagement__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <label>契約ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>