force-app/main/default/objects/ECP_PrinterManagement__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>所属部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>