force-app/main/default/objects/ECP_PrinterManagement__c/fields/ServiceUrl__c.field-meta.xml
<CustomField>
    <fullName>ServiceUrl__c</fullName>
    <label>サービスURL</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>