force-app/main/default/objects/ECP_PrinterManagement__c/recordTypes/ByCloud.recordType-meta.xml
<RecordType>
    <fullName>ByCloud</fullName>
    <active>true</active>
    <label>クラウド接続</label>
</RecordType>