force-app/main/default/objects/ECP_PrinterManagement__c/recordTypes/ByLocale.recordType-meta.xml
<RecordType>
    <fullName>ByLocale</fullName>
    <active>true</active>
    <label>ローカル接続</label>
</RecordType>